Add Important Dates to main page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@ fb-img:
   <p>
 
   <br>
-  <h2>More information coming soon!</h2>
+  <h2>Important Dates</h2>
+  <ul>
+    <li>Submissions open: Wednesday, June 15, 2022</li>
+    <li>Submissions due: Friday, August 5, 2022</li>
+    <li>Notifications sent: Friday, September 2, 2022</li>
+    <li>Program finalized: Friday, September 16, 2022</li>
+    <li>Workshop date: Sunday, November 13, 2022</li>
+  </ul>
+
 </div>
 
 
